maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:32: error: Unmatched closing brace '}' ignored here
}
^